Réponse aux questions

--- a/main.ipynb
+++ b/main.ipynb
@@ -271,6 +271,28 @@
     }
    ],
    "execution_count": 35
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# RÉPONSE AUX QUESTIONS\n",
+    "\n",
+    "# -- Quelle est la différence fondamentale entre la méthode COPY et la méthode EXTERNAL SCHEMA (Spectrum) ?\n",
+    "# la différence fondamentale entre copy et external schema (spectrum), c’est où les données vivent et comment redshift les lit.\n",
+    "\n",
+    "# -- Où résident physiquement les données dans chaque cas ?\n",
+    "\n",
+    "# COPY : elles résident physiquement dans redshift\n",
+    "# EXTERNAL SCHEMA : elles restent physiquement dans s3\n",
+    "\n",
+    "# -- Quel est l'impact sur le modèle de coût et la performance de lecture ?\n",
+    "# COPY : plus rapide et plus stable en perf, coût: cluster redshift\n",
+    "# EXTERNAL SCHEMA : moins performant que table interne, plus coûteux que COPY à cause de spectrum"
+   ],
+   "id": "95e83a37e0e34332"
   }
  ],
  "metadata": {
